# procdocs

./: .codacy.yaml  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: build_and_test.yml  documentation.yml
.github/workflows/: build_and_test.yml
api/: field_descriptor.html  field_type.html  schema.html
docs/source/: conf.py  field_descriptor.rst  index.rst  meta_field_descriptor.rst  meta_schema.rst  meta_schema_specification.rst
docs/source/api/: field_descriptor.rst  field_type.rst  schema.rst
docs/source/guides/: document_specification.rst  getting_started.rst  introduction.rst  schema_specification.rst
document_schemas/: test-document.json  test.json  wi-document.json  wi.json
guides/: document_specification.html  getting_started.html  introduction.html  schema_specification.html
meta-schemas/: test-document.json  test.json  wi-document.json  wi.json
render_templates/: test_template.html.j2
src/procdocs/cli/: __main__.py  config.py  generate_yaml.py  render.py  schema.py  template.py  templates.py  validate.py
src/procdocs/core/: annotated_types.py  app.py  app_context.py  base.py  base_metadata.py  config.py  constants.py  document.py  document_field_descriptor.py  document_schema.py  document_template_scaffold.py  field_descriptor.py  field_type.py  formatting.py  meta_schema.py  metadata.py  metadata_base.py  registry.py  runtime_model.py  utils.py  validation.py  yaml_loader.py  (+1 more)
tests/: test_base_metadata.py  test_field_descriptor.py  test_field_type.py  test_meta_schema.py
(+59 files in other folders)
